completed basic design

--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
     <main class="content">
       <article class="article">
         <h3 class="article_title" alt="Мультяшная картинка фургона">
-          Фритрек и нулевой спринт:<br> Подготовка к работе
+          <span>Фритрек и нулевой спринт:</span> <span>Подготовка к работе</span>
         </h3>
-        <img src="images/image_article.png" class="article_image">
+        <div class="article_image-box">
+          <img src="images/image_article.png" class="article_image">
+          <p class="lable">&lt;/HTML&gt;</p>
+        </div>
         <p class="article_text">
           Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.
         </p>
