fixed completed basic

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/animations.css"/>
-    <link rel="icon" href="/images/favicon.ico" sizes="any">
-    <link rel="icon" href="/svg/favicon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="/images/favicon.png">
+    <link rel="icon" href="./images/favicon.ico" sizes="any">
+    <link rel="icon" href="./svg/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="./images/favicon.png">
   </head>
   <body class="page">
     <header class="header">
@@ -26,7 +26,7 @@
           <span>Фритрек и нулевой спринт:</span> <span>Подготовка к работе</span>
         </h3>
         <div class="article_image-box">
-          <img src="images/image_article.png" class="article_image">
+          <img src="./images/image_article.png" class="article_image">
           <p class="lable">&lt;/HTML&gt;</p>
         </div>
         <p class="article_text">
