-completed for first check

--- a/index.html
+++ b/index.html
@@ -22,12 +22,16 @@
     </header>
     <main class="content">
       <article class="article">
-        <h3 class="article_title" alt="Мультяшная картинка фургона">
+        <h3 class="article_title">
           <span>Фритрек и нулевой спринт:</span>
           <span>Подготовка к работе</span>
         </h3>
         <div class="article_image-box">
-          <img src="./images/image_article.png" class="article_image" />
+          <img
+            src="./images/image_article.png"
+            class="article_image"
+            alt="Мультяшная картинка фургона"
+          />
           <p class="lable">&lt;/HTML&gt;</p>
         </div>
         <p class="article_text">
@@ -79,13 +83,14 @@
         </div>
       </article>
       <article class="article">
-        <h3 class="article_title" alt="Мультяшная картинка фургона">
+        <h3 class="article_title">
           <span>1 спринт:</span><span>Я — чистый лист</span>
         </h3>
         <div class="article_image-box">
           <img
             src="./images/1sprint_01.png"
             class="article_image article_image_01-01"
+            alt="Дерево на заснеженном поле"
           />
           <p class="lable">&lt;EXCITED&gt;</p>
         </div>
@@ -141,13 +146,14 @@
         </div>
       </article>
       <article class="article">
-        <h3 class="article_title" alt="Мультяшная картинка фургона">
+        <h3 class="article_title">
           <span>1 спринт:</span> <span>А если не получится?</span>
         </h3>
         <div class="article_image-box">
           <img
             src="./images/1sprint_02.png"
             class="article_image article_image_01-02"
+            alt="Фотография кода"
           />
           <p class="lable">&lt;COMPLICATED&gt;</p>
         </div>
@@ -201,13 +207,14 @@
         </div>
       </article>
       <article class="article">
-        <h3 class="article_title" alt="Мультяшная картинка фургона">
+        <h3 class="article_title">
           <span>2 спринт:</span> <span>Погоня за идеалом</span>
         </h3>
         <div class="article_image-box">
           <img
             src="./images/2sprint_01.png"
             class="article_image article_image_02-01"
+            alt="Фотография девушки с дневником и компьютером"
           />
           <p class="lable">&lt;OVERWHELMED&gt;</p>
         </div>
@@ -263,13 +270,14 @@
         </div>
       </article>
       <article class="article">
-        <h3 class="article_title" alt="Мультяшная картинка фургона">
+        <h3 class="article_title">
           <span>2 спринт:</span> <span>О тех, кто рядом</span>
         </h3>
         <div class="article_image-box">
           <img
             src="./images/2sprint_02.png"
             class="article_image article_image_02-02"
+            alt="Фотография компьютера с акцентными цветами"
           />
           <p class="lable">&lt;HELP!&gt;</p>
         </div>
@@ -324,13 +332,14 @@
         </div>
       </article>
       <article class="article">
-        <h3 class="article_title" alt="Мультяшная картинка фургона">
+        <h3 class="article_title">
           <span>3 спринт:</span> <span>Обходные стратегии</span>
         </h3>
         <div class="article_image-box">
           <img
             src="./images/3sprint_01.png"
             class="article_image article_image_03-01"
+            alt="Фотография группы людей с компьютерами"
           />
           <p class="lable">&lt;DIFFICULT&gt;</p>
         </div>
@@ -384,13 +393,14 @@
         </div>
       </article>
       <article class="article">
-        <h3 class="article_title" alt="Мультяшная картинка фургона">
+        <h3 class="article_title">
           <span>3 спринт:</span> <span>Когда опускаются руки</span>
         </h3>
         <div class="article_image-box">
           <img
             src="./images/3sprint_02.png"
             class="article_image article_image_03-02"
+            alt="Фотография медитирующего человека в инвертированных цветах"
           />
           <p class="lable">&lt;CONSISTENT&gt;</p>
         </div>
@@ -446,11 +456,15 @@
         </div>
       </article>
       <article class="article">
-        <h3 class="article_title" alt="Мультяшная картинка фургона">
+        <h3 class="article_title">
           <span>«Сейчас я здесь»</span>
         </h3>
         <div class="article_image-box">
-          <img src="./images/now.jpg" class="article_image article_image_now" />
+          <img
+            src="./images/now.jpg"
+            class="article_image article_image_now"
+            alt="Рассвет в аэропорте"
+          />
           <p class="lable">&lt;AWAITING&gt;</p>
         </div>
         <p class="article_text">
@@ -513,7 +527,7 @@
           aria-controls="dialog-save"
         >
           <svg class="save-svg button-save-svg" viewBox="0 0 29 28">
-            <use href="#floppy" />
+            <use href="./svg/floppy.svg#floppy" />
           </svg>
           <span class="button__text">Сохранить на память</span>
         </button>
@@ -542,630 +556,3 @@
     <script src="./scripts/like.js"></script>
   </body>
 </html>
-
-<svg
-  width="29"
-  height="28"
-  viewBox="0 0 29 28"
-  fill="none"
-  xmlns="http://www.w3.org/2000/svg"
->
-  <symbol
-    id="floppy"
-    class="floppy"
-    fill="var(--save-svg-color)"
-    stroke="var(--save-svg-color)"
-  >
-    <rect x="0.5" width="2.15385" height="2.15385" fill="black" />
-    <rect
-      x="0.5"
-      y="2.1543"
-      width="2.15385"
-      height="2.15385"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="0.5"
-      y="4.30762"
-      width="2.15385"
-      height="2.15385"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="0.5"
-      y="6.46191"
-      width="2.15385"
-      height="2.15385"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="0.5"
-      y="8.61523"
-      width="2.15385"
-      height="2.15385"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="0.5"
-      y="10.7695"
-      width="2.15385"
-      height="2.15385"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="0.5"
-      y="12.9229"
-      width="2.15385"
-      height="2.15385"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="0.5"
-      y="15.0771"
-      width="2.15385"
-      height="2.15385"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="0.5"
-      y="17.2305"
-      width="2.15385"
-      height="2.15385"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="0.5"
-      y="19.3848"
-      width="2.15385"
-      height="2.15385"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="0.5"
-      y="21.5381"
-      width="2.15385"
-      height="2.15385"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="0.5"
-      y="23.6924"
-      width="2.15385"
-      height="2.15385"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="0.5"
-      y="25.8457"
-      width="2.15385"
-      height="2.15385"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="24.1927"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 24.1927 0)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="22.0391"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 22.0391 0)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="19.8841"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 19.8841 0)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="17.7305"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 17.7305 0)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="15.5768"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 15.5768 0)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="13.4232"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 13.4232 0)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="11.2695"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 11.2695 0)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="9.11589"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 9.11589 0)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="6.96094"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 6.96094 0)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="4.8073"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 4.8073 0)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="26.3464"
-      y="2.1543"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 26.3464 2.1543)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="6.96094"
-      y="4.30762"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 6.96094 4.30762)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="6.96094"
-      y="2.1543"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 6.96094 2.1543)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="6.96094"
-      y="6.46191"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 6.96094 6.46191)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="22.0391"
-      y="4.30762"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 22.0391 4.30762)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="22.0391"
-      y="2.1543"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 22.0391 2.1543)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="22.0391"
-      y="6.46191"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 22.0391 6.46191)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="17.7305"
-      y="4.30762"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 17.7305 4.30762)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="17.7305"
-      y="2.1543"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 17.7305 2.1543)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="17.7305"
-      y="6.46191"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 17.7305 6.46191)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="22.0391"
-      y="8.61523"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 22.0391 8.61523)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="19.8841"
-      y="8.61523"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 19.8841 8.61523)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="17.7305"
-      y="8.61523"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 17.7305 8.61523)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="15.5768"
-      y="8.61523"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 15.5768 8.61523)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="13.4232"
-      y="8.61523"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 13.4232 8.61523)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="11.2695"
-      y="8.61523"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 11.2695 8.61523)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="9.11589"
-      y="8.61523"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 9.11589 8.61523)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="6.96094"
-      y="8.61523"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 6.96094 8.61523)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="24.1927"
-      y="15.0771"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 24.1927 15.0771)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="22.0391"
-      y="15.0771"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 22.0391 15.0771)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="19.8841"
-      y="15.0771"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 19.8841 15.0771)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="17.7305"
-      y="15.0771"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 17.7305 15.0771)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="15.5768"
-      y="15.0771"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 15.5768 15.0771)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="13.4232"
-      y="15.0771"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 13.4232 15.0771)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="11.2695"
-      y="15.0771"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 11.2695 15.0771)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="9.11589"
-      y="15.0771"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 9.11589 15.0771)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="6.96094"
-      y="15.0771"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 6.96094 15.0771)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="24.1927"
-      y="17.2305"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 24.1927 17.2305)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="6.96094"
-      y="17.2305"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 6.96094 17.2305)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="24.1927"
-      y="19.3848"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 24.1927 19.3848)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="6.96094"
-      y="19.3848"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 6.96094 19.3848)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="24.1927"
-      y="21.5381"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 24.1927 21.5381)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="6.96094"
-      y="21.5381"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 6.96094 21.5381)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="6.96094"
-      y="23.6924"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 6.96094 23.6924)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="24.1927"
-      y="23.6924"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 24.1927 23.6924)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="26.3464"
-      y="25.8457"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 26.3464 25.8457)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="24.1927"
-      y="25.8457"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 24.1927 25.8457)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="22.0391"
-      y="25.8457"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 22.0391 25.8457)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="19.8841"
-      y="25.8457"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 19.8841 25.8457)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="17.7305"
-      y="25.8457"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 17.7305 25.8457)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="15.5768"
-      y="25.8457"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 15.5768 25.8457)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="13.4232"
-      y="25.8457"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 13.4232 25.8457)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="11.2695"
-      y="25.8457"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 11.2695 25.8457)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="9.11589"
-      y="25.8457"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 9.11589 25.8457)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="6.96094"
-      y="25.8457"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 6.96094 25.8457)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="4.8073"
-      y="25.8457"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(90 4.8073 25.8457)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="28.5"
-      y="28"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(-180 28.5 28)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="28.5"
-      y="25.8457"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(-180 28.5 25.8457)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="28.5"
-      y="23.6924"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(-180 28.5 23.6924)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="28.5"
-      y="21.5381"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(-180 28.5 21.5381)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="28.5"
-      y="19.3848"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(-180 28.5 19.3848)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="28.5"
-      y="17.2305"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(-180 28.5 17.2305)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="28.5"
-      y="15.0771"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(-180 28.5 15.0771)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="28.5"
-      y="12.9229"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(-180 28.5 12.9229)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="28.5"
-      y="10.7695"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(-180 28.5 10.7695)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="28.5"
-      y="8.61523"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(-180 28.5 8.61523)"
-      fill="var(--save-svg-color)"
-    />
-    <rect
-      x="28.5"
-      y="6.46191"
-      width="2.15385"
-      height="2.15385"
-      transform="rotate(-180 28.5 6.46191)"
-      fill="var(--save-svg-color)"
-    />
-  </symbol>
-</svg>
