feature: added README

--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
             src="./images/1sprint_02.png"
             class="article_image article_image_01-02"
             alt="Фотография кода"
+            loading="lazy"
           />
           <p class="lable">&lt;COMPLICATED&gt;</p>
         </div>
@@ -215,6 +216,7 @@
             src="./images/2sprint_01.png"
             class="article_image article_image_02-01"
             alt="Фотография девушки с дневником и компьютером"
+            loading="lazy"
           />
           <p class="lable">&lt;OVERWHELMED&gt;</p>
         </div>
@@ -278,6 +280,7 @@
             src="./images/2sprint_02.png"
             class="article_image article_image_02-02"
             alt="Фотография компьютера с акцентными цветами"
+            loading="lazy"
           />
           <p class="lable">&lt;HELP!&gt;</p>
         </div>
@@ -340,6 +343,7 @@
             src="./images/3sprint_01.png"
             class="article_image article_image_03-01"
             alt="Фотография группы людей с компьютерами"
+            loading="lazy"
           />
           <p class="lable">&lt;DIFFICULT&gt;</p>
         </div>
@@ -401,6 +405,7 @@
             src="./images/3sprint_02.png"
             class="article_image article_image_03-02"
             alt="Фотография медитирующего человека в инвертированных цветах"
+            loading="lazy"
           />
           <p class="lable">&lt;CONSISTENT&gt;</p>
         </div>
@@ -464,6 +469,7 @@
             src="./images/now.jpg"
             class="article_image article_image_now"
             alt="Рассвет в аэропорте"
+            loading="lazy"
           />
           <p class="lable">&lt;AWAITING&gt;</p>
         </div>
