fixed: fonts comments

--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
         <dialog id="dialog-save" class="dialog-save">
           <div class="dialog-info">
             <svg class="save-svg dialog-save-svg" viewBox="0 0 29 28">
-              <use href="#floppy" />
+              <use href="./svg/floppy.svg#floppy"/>
             </svg>
             <span class="dialog__text"
               >Вставьте<br />
