fixed: all comments

--- a/index.html
+++ b/index.html
@@ -17,22 +17,21 @@
     <header class="header">
       <div class="header_box">
         <h1 class="header_title">&lt;/HTML&gt;</h1>
-        <h2 class="header_subtitle">закрывающий тег</h2>
+        <p class="header_subtitle">закрывающий тег</p>
       </div>
     </header>
     <main class="content">
       <article class="article">
-        <h3 class="article_title">
-          <span>Фритрек и нулевой спринт:</span>
-          <span>Подготовка к работе</span>
-        </h3>
+        <h2 class="article_title">
+          Фритрек и нулевой спринт: Подготовка к работе
+        </h2>
         <div class="article_image-box">
           <img
             src="./images/image_article.png"
             class="article_image"
             alt="Мультяшная картинка фургона"
           />
-          <p class="lable">&lt;/HTML&gt;</p>
+          <p class="lable">&lt;/html&gt;</p>
         </div>
         <p class="article_text">
           Это было самое начало пути. На этом этапе важно было проникнуться
@@ -44,7 +43,7 @@
           меня профессию, а также сверстать первый проект.
         </p>
         <div class="article_interactive">
-          <button class="card__icon-button is-liked">
+          <button type="button" class="card__icon-button" aria-label="Понравилось">
             <svg
               class="like-icon"
               width="39"
@@ -77,19 +76,19 @@
               />
             </svg>
           </button>
-          <button class="button card__like-button">
+          <button type="button" class="button card__like-button">
             <span class="button__text">like</span>
           </button>
         </div>
       </article>
       <article class="article">
-        <h3 class="article_title">
-          <span>1 спринт:</span><span>Я — чистый лист</span>
-        </h3>
+        <h2 class="article_title">
+          1 спринт: Я — чистый лист
+        </h2>
         <div class="article_image-box">
           <img
             src="./images/1sprint_01.png"
-            class="article_image article_image_01-01"
+            class="article_image grayscale-darker"
             alt="Дерево на заснеженном поле"
           />
           <p class="lable">&lt;EXCITED&gt;</p>
@@ -107,7 +106,8 @@
           казались сложными, далекими и непонятными.
         </p>
         <div class="article_interactive">
-          <button class="card__icon-button is-liked">
+          <button type="button" class="card__icon-button"
+          aria-label="Понравилось">
             <svg
               class="like-icon"
               width="39"
@@ -140,23 +140,23 @@
               />
             </svg>
           </button>
-          <button class="button card__like-button">
+          <button type="button" class="button card__like-button">
             <span class="button__text">like</span>
           </button>
         </div>
       </article>
       <article class="article">
-        <h3 class="article_title">
-          <span>1 спринт:</span> <span>А если не получится?</span>
-        </h3>
+        <h2 class="article_title">
+          1 спринт: А если не получится?
+        </h2>
         <div class="article_image-box">
           <img
             src="./images/1sprint_02.png"
-            class="article_image article_image_01-02"
+            class="article_image blur"
             alt="Фотография кода"
             loading="lazy"
           />
-          <p class="lable">&lt;COMPLICATED&gt;</p>
+          <p class="lable">&lt;complicated&gt;</p>
         </div>
         <p class="article_text">
           Первый проект — позади! Но это всё ещё самое начало пути. Радость
@@ -169,7 +169,8 @@
           появилось ощущение, что новая профессия становится реальнее.
         </p>
         <div class="article_interactive">
-          <button class="card__icon-button is-liked">
+          <button type="button" class="card__icon-button"
+          aria-label="Понравилось">
             <svg
               class="like-icon"
               width="39"
@@ -202,23 +203,23 @@
               />
             </svg>
           </button>
-          <button class="button card__like-button">
+          <button type="button" class="button card__like-button">
             <span class="button__text">like</span>
           </button>
         </div>
       </article>
       <article class="article">
-        <h3 class="article_title">
-          <span>2 спринт:</span> <span>Погоня за идеалом</span>
-        </h3>
+        <h2 class="article_title">
+          2 спринт: Погоня за идеалом
+        </h2>
         <div class="article_image-box">
           <img
             src="./images/2sprint_01.png"
-            class="article_image article_image_02-01"
+            class="article_image saturate"
             alt="Фотография девушки с дневником и компьютером"
             loading="lazy"
           />
-          <p class="lable">&lt;OVERWHELMED&gt;</p>
+          <p class="lable">&lt;overwhelmed&gt;</p>
         </div>
         <p class="article_text">
           На этом этапе вы уже достаточно разбирались в основах вёрстки, чтобы
@@ -233,7 +234,8 @@
           обучением. Пришлось искать мотивацию, чтобы понять как все успеть.
         </p>
         <div class="article_interactive">
-          <button class="card__icon-button is-liked">
+          <button type="button" class="card__icon-button"
+          aria-label="Понравилось">
             <svg
               class="like-icon"
               width="39"
@@ -266,23 +268,23 @@
               />
             </svg>
           </button>
-          <button class="button card__like-button">
+          <button type="button" class="button card__like-button">
             <span class="button__text">like</span>
           </button>
         </div>
       </article>
       <article class="article">
-        <h3 class="article_title">
-          <span>2 спринт:</span> <span>О тех, кто рядом</span>
-        </h3>
+        <h2 class="article_title">
+          2 спринт: О тех, кто рядом
+        </h2>
         <div class="article_image-box">
           <img
             src="./images/2sprint_02.png"
-            class="article_image article_image_02-02"
+            class="article_image hue-rotate"
             alt="Фотография компьютера с акцентными цветами"
             loading="lazy"
           />
-          <p class="lable">&lt;HELP!&gt;</p>
+          <p class="lable">&lt;help!&gt;</p>
         </div>
         <p class="article_text">
           Всё это время вы были не одиноки (хотя, возможно, иногда и
@@ -296,7 +298,8 @@
           даже не очень хорошо зная CSS, умеет профессионально дебаггить!
         </p>
         <div class="article_interactive">
-          <button class="card__icon-button is-liked">
+          <button type="button" class="card__icon-button"
+          aria-label="Понравилось">
             <svg
               class="like-icon"
               width="39"
@@ -329,23 +332,23 @@
               />
             </svg>
           </button>
-          <button class="button card__like-button">
+          <button type="button" class="button card__like-button">
             <span class="button__text">like</span>
           </button>
         </div>
       </article>
       <article class="article">
-        <h3 class="article_title">
-          <span>3 спринт:</span> <span>Обходные стратегии</span>
-        </h3>
+        <h2 class="article_title">
+          3 спринт: Обходные стратегии
+        </h2>
         <div class="article_image-box">
           <img
             src="./images/3sprint_01.png"
-            class="article_image article_image_03-01"
+            class="article_image grayscale"
             alt="Фотография группы людей с компьютерами"
             loading="lazy"
           />
-          <p class="lable">&lt;DIFFICULT&gt;</p>
+          <p class="lable">&lt;difficult&gt;</p>
         </div>
         <p class="article_text">
           На этом курсе вы постоянно решали разные задачи. В какой-то момент вам
@@ -358,7 +361,8 @@
           магии CSS.
         </p>
         <div class="article_interactive">
-          <button class="card__icon-button is-liked">
+          <button type="button" class="card__icon-button"
+          aria-label="Понравилось">
             <svg
               class="like-icon"
               width="39"
@@ -391,23 +395,23 @@
               />
             </svg>
           </button>
-          <button class="button card__like-button">
+          <button type="button" class="button card__like-button">
             <span class="button__text">like</span>
           </button>
         </div>
       </article>
       <article class="article">
-        <h3 class="article_title">
-          <span>3 спринт:</span> <span>Когда опускаются руки</span>
-        </h3>
+        <h2 class="article_title">
+          3 спринт: Когда опускаются руки
+        </h2>
         <div class="article_image-box">
           <img
             src="./images/3sprint_02.png"
-            class="article_image article_image_03-02"
+            class="article_image invert"
             alt="Фотография медитирующего человека в инвертированных цветах"
             loading="lazy"
           />
-          <p class="lable">&lt;CONSISTENT&gt;</p>
+          <p class="lable">&lt;consistent&gt;</p>
         </div>
         <p class="article_text">
           Во время учёбы часто возникает чувство, когда не знаешь, за что
@@ -422,7 +426,8 @@
           конце, сама или с помощью мужа, наставника и тех поддержки.
         </p>
         <div class="article_interactive">
-          <button class="card__icon-button is-liked">
+          <button type="button" class="card__icon-button"
+          aria-label="Понравилось">
             <svg
               class="like-icon"
               width="39"
@@ -455,23 +460,23 @@
               />
             </svg>
           </button>
-          <button class="button card__like-button">
+          <button type="button" class="button card__like-button">
             <span class="button__text">like</span>
           </button>
         </div>
       </article>
       <article class="article">
-        <h3 class="article_title">
-          <span>«Сейчас я здесь»</span>
-        </h3>
+        <h2 class="article_title">
+          «Сейчас я здесь»
+        </h2>
         <div class="article_image-box">
           <img
             src="./images/now.jpg"
-            class="article_image article_image_now"
+            class="article_image sepia-darker"
             alt="Рассвет в аэропорте"
             loading="lazy"
           />
-          <p class="lable">&lt;AWAITING&gt;</p>
+          <p class="lable">&lt;awaiting&gt;</p>
         </div>
         <p class="article_text">
           Сейчас вы уже очень много знаете о вёрстке. Но это только начало.
@@ -487,7 +492,8 @@
           интересно что же нас ждет впереди!
         </p>
         <div class="article_interactive">
-          <button class="card__icon-button is-liked">
+          <button type="button" class="card__icon-button"
+          aria-label="Понравилось">
             <svg
               class="like-icon"
               width="39"
@@ -520,7 +526,7 @@
               />
             </svg>
           </button>
-          <button class="button card__like-button">
+          <button type="button" class="button card__like-button">
             <span class="button__text">like</span>
           </button>
         </div>
@@ -542,10 +548,10 @@
             <svg class="save-svg dialog-save-svg" viewBox="0 0 29 28">
               <use href="./svg/floppy.svg#floppy"/>
             </svg>
-            <span class="dialog__text"
-              >Вставьте<br />
-              дискету, чтобы<br />
-              продолжить</span
+            <p class="dialog__text"
+              >Вставьте
+              дискету, чтобы
+              продолжить</p
             >
           </div>
           <button
@@ -554,7 +560,7 @@
             onclick="window['dialog-save'].close();"
             aria-controls="dialog-save"
           >
-            <span class="button__text">ok</span>
+            <p class="button__text">ok</p>
           </button>
         </dialog>
       </div>
